# mailmind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: design.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CategoryChip.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: check_atlas.py  check_vector_search.py  create_vector_index.py  load_samples.py  process_inbox.py
src/mailmind/: __init__.py  classifiers.py  config.py  domain.py  embedders.py  operations.py  ports.py  sample_data.py  store.py
src/mailmind/core/: __init__.py  _json.py  classifier.py  draft_writer.py  email_parsing.py  embedding_input.py  ingest_transform.py  summarizer.py
src/mailmind/ingest/: __init__.py  pipeline.py
src/mailmind/mcp/: __init__.py  config.py
src/mailmind/web/: __init__.py  app.py  main.py
tests/: test_classifiers.py  test_embedders.py  test_ingest.py  test_operations.py  test_sample_data.py  test_store.py  test_web.py
tests/core/: test_classifier.py  test_draft_writer.py  test_email_parsing.py  test_embedding_input.py  test_ingest_transform.py  test_summarizer.py
tests/mcp/: test_config.py
