[project]
name = "mailmind"
version = "0.1.0"
description = "Agentic email assistant — classify, summarize, draft, vector search (Google Cloud Rapid Agent Hackathon, MongoDB track)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
